--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Content for footer...
-title: Ashterism
+title: Ashterism2
 author: Musings by Ash
 description: A collection of thoughts and experiences on Astronomy, Hiking, Sustainability, and the like
 # email: ""
