--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ markdown: kramdown
 timezone: Etc/UTC # GitHub uses UTC. This is to force dev environment to match
 future: false # GitHub Pages will publish future posts if this isn't set to false
 
+#####
+
 # Minima variables
 github_username:   ashterism
 instagram_username: asherture
@@ -18,3 +20,10 @@ rss: rss
 
 show_excerpts: false
 
+plugins:
+  - jekyll-feed
+  - jekyll-sitemap
+
+  # titles_from_headings:
+  # strip_title: true
+  # collections: true
