--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,18 @@
-# Content for header / footer
+###### Content for header / footer
 title: Ashterism
 author: Musings by Ash
-description: A collection of thoughts and experiences on Astronomy, Hiking, Sustainability, and the like
+description: A collection of thoughts and experiences on Astronomy, Hiking, Sustainability, and the like  # This will also show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+
 # email: ""
 url: https://ashterism.com
+
+##### Site config stuff
 
 theme: minima
 markdown: kramdown
 
 timezone: Etc/UTC # GitHub uses UTC. This is to force dev environment to match
 future: false # GitHub Pages will publish future posts if this isn't set to false
-
-#####
 
 # Minima variables
 github_username:   ashterism
