--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,8 @@ show_excerpts: false
 plugins:
   - jekyll-feed
   - jekyll-sitemap
+  - jekyll-gfm-admonitions
+
 
   # titles_from_headings:
   # strip_title: true
