--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: https://ashterism.com
 ##### Site config stuff
 
 theme: minima
-markdown: kramdown
+markdown: GFM
 
 timezone: Etc/UTC # GitHub uses UTC. This is to force dev environment to match
 future: false # GitHub Pages will publish future posts if this isn't set to false
