--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -10,9 +10,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: helveg/jekyll-action@v2
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
         with:
-          enable_cache: true
+          ruby-version: '3.1'
+
+      - name: Install dependencies
+        run: bundle install
+
+      - name: Build site
+        run: bundle exec jekyll build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
