--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install dependencies
         run: bundle install
 
-      - name: Build site
+      - name: Build the site
         run: bundle exec jekyll build
 
       - name: Deploy to GitHub Pages
