--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 ###### Content for header / footer
 title: Sustainamo
 author: Content by Ash Bladon
-description: 
+description: A free, comprehensive guide to creating and implementing a meaningful sustainability strategy # This will also show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+
 
 # email: ""
 url: https://sustainamo.com
@@ -19,8 +20,8 @@ timezone: Etc/UTC # GitHub uses UTC. This is to force dev environment to match
 future: false # GitHub Pages will publish future posts if this isn't set to false
 
 # Minima variables
-github_username:   ashterism
-instagram_username: asherture
+github_username: sustainamo
+# instagram_username: 
 rss: rss
 
 home_post_limit: 5   # Change to show more posts
