--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: A free, comprehensive guide to creating and implementing a meaningf
 
 
 # email: ""
-url: https://sustainamo.com
+# url: https://sustainamo.com
 baseurl: "/sustainamo"
 
 
