--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-seo-tag
-
+  - jekyll-styleguide
 
   # titles_from_headings:
   # strip_title: true
