Vendor jekyll-styleguide plugin as plain files and enable it in config

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-seo-tag
+  - jekyll-styleguide
 
   # titles_from_headings:
   # strip_title: true
