--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,10 @@ github_username: sustainamo
 # instagram_username: 
 rss: rss
 
+collections:
+  components:
+    output: true
+
 plugins:
   - jekyll-feed
   - jekyll-sitemap
