--- a/_config.yml
+++ b/_config.yml
@@ -23,11 +23,14 @@ github_username: sustainamo
 # instagram_username: 
 rss: rss
 
+collections_dir: style-guide
 collections:
   basics:
     output: false
+    permalink: /style-guide/basics/:name/
   components:
     output: false
+    permalink: /style-guide/components/:name/
 
 plugins:
   - jekyll-feed
