--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 - title: Sustainability
-  url: /sustainability/
+  url: /sustainabilityframework/
   order: 1
   children:
     - title: Sustainability strategy
