--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 - title: Sustainability
-  url: /sustainabilityframework/
+  url: /sustainability/
   order: 1
   children:
     - title: Sustainability strategy
-      url: /sustainability/strategy/
+      url: /sustainability-framework/
       order: 1
     - title: Sustainability measures
       url: /sustainability/measures/
