--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -27,8 +27,8 @@
     - title: Join the project
       url: /about/join-the-project/
       order: 1
-    - title: Planned content
-      url: /about/planned-content/
+    - title: Roadmap
+      url: /about/roadmap/
       order: 2
     - title: Sharing policy
       url: /about/sharing-policy/
